--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  amplify_api: ^1.0.0
+  amplify_auth_cognito: ^1.0.0
+  amplify_authenticator: ^1.0.0
+  amplify_flutter: ^1.0.0
+  amplify_core: ^1.0.0
+
+  amplify_storage_s3: ^1.0.0
+
+
+  amplify_analytics_pinpoint: ^1.0.0
+
+  go_router: ^6.5.5
 
 
   # The following adds the Cupertino Icons font to your application.
