--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,10 @@ jobs:
 
       # (3)
       - name: Make copy of artifacts
-        run: |
+        run: ls
           chmod u+x "${GITHUB_WORKSPACE}/createandcopytofolder.sh"
           bash "${GITHUB_WORKSPACE}/createandcopytofolder.sh"
+          
 
       # (4)
       - uses: stefanzweifel/git-auto-commit-action@v4
