--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,12 +13,18 @@ dependencies:
     sdk: flutter
   go_router: ^6.5.5
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.5
+  auto_size_text: ^3.0.0
+  universal_html: ^2.2.4
+  dio: ^5.3.3
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  flutter_bloc: ^8.1.3
 
 flutter:
   uses-material-design: true
