--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,13 +19,16 @@ dependencies:
   dio: ^5.3.3
   http: ^1.1.0
   carousel_slider: ^4.2.1
+  json_annotation: ^4.8.0
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
-  flutter_bloc: ^8.1.3
+  build_runner: ^2.3.3
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
