--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   carousel_slider: ^4.2.1
   json_annotation: ^4.8.0
   flutter_bloc: ^8.1.3
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
